# deepin-reader

./: .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  README.zh_CN.md  deepin_reader.pro  install_dep  linglong.yaml  lupdate.sh  translate_generation.sh
.reuse/: dep5
.tx/: config  (+1 more)
htmltopdf/: CMakeLists.txt  htmltopdf.pro  htmltopdfconverter.cpp  htmltopdfconverter.h  main.cpp
reader/: Application.cpp  Application.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  ddlog.h  deepin-reader.desktop  load_libs.c  logger.cpp  logger.h  main.cpp  reader.pro  src.pri
reader/app/: DBusObject.cpp  DBusObject.h  Database.cpp  Database.h  DebugTimeManager.cpp  DebugTimeManager.h  Global.cpp  Global.h  MsgHeader.h  TMFunctionThread.cpp  TMFunctionThread.h  Utils.cpp  Utils.h  accessible.h  app.pri  eventlogutils.cpp  html2pdfconverter.cpp  html2pdfconverter.h  mythread.cpp  mythread.h
reader/browser/: BrowserAnnotation.cpp  BrowserAnnotation.h  BrowserMagniFier.cpp  BrowserMagniFier.h  BrowserMenu.cpp  BrowserMenu.h  BrowserPage.cpp  BrowserPage.h  BrowserWord.cpp  BrowserWord.h  PageRenderThread.cpp  PageRenderThread.h  PageSearchThread.cpp  PageSearchThread.h  SheetBrowser.cpp  SheetBrowser.h
reader/document/: DjVuModel.cpp  DjVuModel.h  Model.cpp  Model.h  PDFModel.cpp  PDFModel.h  XpsDocument.cpp  XpsDocument.h  XpsDocumentAdapter.cpp  XpsDocumentAdapter.h  XpsTextExtractor.cpp  XpsTextExtractor.h  document.pri
reader/sidebar/: BookMarkDelegate.cpp  BookMarkDelegate.h  BookMarkWidget.cpp  BookMarkWidget.h  CatalogTreeView.cpp  CatalogWidget.cpp  CatalogWidget.h  NotesDelegate.cpp  NotesDelegate.h  NotesWidget.cpp  NotesWidget.h  ReaderImageThreadPoolManager.cpp  ReaderImageThreadPoolManager.h  SearchResDelegate.cpp  SearchResWidget.cpp  SearchResWidget.h  SheetSidebar.cpp  SheetSidebar.h  SideBarImageListview.cpp  SideBarImageListview.h  SideBarImageViewModel.cpp  SideBarImageViewModel.h  ThumbnailDelegate.cpp  ThumbnailWidget.cpp  ThumbnailWidget.h
reader/sidebar/bookmark/: BookMarkDelegate.h  BookMarkWidget.cpp  BookMarkWidget.h
reader/sidebar/catalog/: CatalogTreeView.cpp  CatalogWidget.cpp
reader/sidebar/note/: NoteViewWidget.h  NotesWidget.cpp
reader/sidebar/threadmanager/: ReaderImageThreadPoolManager.cpp  ReaderImageThreadPoolManager.h
reader/sidebar/thumbnail/: PagingWidget.cpp  PagingWidget.h  ThumbnailDelegate.h  ThumbnailWidget.cpp  ThumbnailWidget.h
reader/uiframe/: Central.cpp  Central.h  CentralDocPage.cpp  CentralDocPage.h  CentralNavPage.cpp  CentralNavPage.h  DfmStandardPaths.cpp  DfmStandardPaths.h  DocSheet.cpp  DocSheet.h  DocTabBar.cpp  DocTabBar.h  DocThread.cpp  DocThread.h  SheetRenderer.cpp  SheetRenderer.h  TitleMenu.cpp  TitleMenu.h  TitleWidget.cpp  TitleWidget.h  uiframe.pri
reader/widgets/: AttrScrollWidget.cpp  AttrScrollWidget.h  BaseWidget.cpp  BaseWidget.h  ColorWidgetAction.cpp  EncryptionPage.cpp  EncryptionPage.h  FileAttrWidget.cpp  FindWidget.cpp  FindWidget.h  HandleMenu.cpp  PagingWidget.cpp  PagingWidget.h  ProgressDialog.cpp  ProgressDialog.h  RoundColorWidget.cpp  SaveDialog.cpp  SaveDialog.h  ScaleMenu.cpp  ScaleMenu.h  ScaleWidget.cpp  ScaleWidget.h  SecurityDialog.cpp  SecurityDialog.h  ShortCutShow.cpp  ShortCutShow.h  SlidePlayWidget.cpp  SlidePlayWidget.h  SlideWidget.cpp  SlideWidget.h  TextEditWidget.cpp  TextEditWidget.h  TipsWidget.cpp  TransparentTextEdit.cpp  TransparentTextEdit.h  WordWrapLabel.cpp  widgets.pri
tests/: CMakeLists.txt  clean.sh  exclude_unreachable.py  files.qrc  local-test.sh  main.cpp  qmake-lcov-test.sh  test-prj-running.sh  tests.pro  ut_application.cpp  ut_application.h  ut_common.cpp  ut_common.h  ut_compat.h  ut_defines.h  ut_logger.cpp  ut_mainwindow.cpp
tests/app/: ut_Database.cpp  ut_app.cpp  ut_database.cpp  ut_dbusobject.cpp  ut_debugtimemanager.cpp  ut_global.cpp  ut_utils.cpp
tests/at/: at-tree.yaml  cases_mapped.yaml  cases_raw.yaml  element_gaps.yaml  suite-cases.yaml
tests/at/dump/: runtime.yaml  scanned_gaps.yaml  scanned_ok.yaml
tests/at/dump/states/: 00_all.yaml
tests/at/yaml/: elements.yaml
tests/at/yaml/主界面 — 无文档打开/: 主界面 — 无文档打开.suite.yaml
tests/at/yaml/右键侧栏书签菜单/: 右键侧栏书签菜单.suite.yaml
tests/browser/: ut_browser.cpp  ut_browserannotation.cpp  ut_browsermagnifier.cpp  ut_browsermenu.cpp  ut_browserpage.cpp  ut_browserword.cpp  ut_pagerenderthread.cpp  ut_pagesearchthread.cpp  ut_sheetbrowser.cpp
tests/document/: ut_djvumodel.cpp  ut_document.cpp  ut_model.cpp  ut_pdfmodel.cpp  ut_xpsmodel.cpp
tests/files/: normal.xps
tests/include/gtest/: addr_pri.h  stub.h
tests/sidebar/: ut_BookMarkDelegate.cpp  ut_BookMarkWidget.cpp  ut_CatalogTreeView.cpp  ut_SideBarImageListview.cpp  ut_SideBarImageViewModel.cpp  ut_bookmarkdelegate.cpp  ut_bookmarkwidget.cpp  ut_catalogtreeview.cpp  ut_catalogwidget.cpp  ut_notesdelegate.cpp  ut_noteswidget.cpp  ut_readerimagethreadpoolmanager.cpp  ut_searchresdelegate.cpp  ut_searchreswidget.cpp  ut_sheetsidebar.cpp  ut_sidebarimagelistview.cpp  ut_sidebarimageviewmodel.cpp  ut_thumbnaildelegate.cpp  ut_thumbnailwidget.cpp
tests/uiframe/: ut_Central.cpp  ut_central.cpp  ut_centraldocpage.cpp  ut_docsheet.cpp  ut_doctabbar.cpp  ut_sheetrenderer.cpp  ut_titlemenu.cpp  ut_titlewidget.cpp  ut_uiframe.cpp
tests/widgets/: ut_AttrScrollWidget.cpp  ut_BaseWidget.cpp  ut_ColorWidgetAction.cpp  ut_FileAttrWidget.cpp  ut_FindWidget.cpp  ut_HandleMenu.cpp  ut_PagingWidget.cpp  ut_ProgressDialog.cpp  ut_SaveDialog.cpp  ut_ScaleMenu.cpp  ut_ScaleWidget.cpp  ut_SecurityDialog.cpp  ut_ShortCutShow.cpp  ut_SlideWidget.cpp  ut_TipsWidget.cpp  ut_attrscrollwidget.cpp  ut_basewidget.cpp  ut_colorwidgetaction.cpp  ut_encryptionpage.cpp  ut_fileattrwidget.cpp  ut_findwidget.cpp  ut_handlemenu.cpp  ut_pagingwidget.cpp  ut_progressdialog.cpp  ut_roundcolorwidget.cpp  ut_savedialog.cpp  ut_scalemenu.cpp  ut_scalewidget.cpp  ut_securitydialog.cpp  ut_shortcutshow.cpp  ut_slideplaywidget.cpp  ut_slidewidget.cpp  ut_texteditwidget.cpp  ut_tipswidget.cpp  ut_transparenttextedit.cpp  ut_widgets.cpp  ut_widgets.h  ut_wordwraplabel.cpp
(+1298 files in other folders)
